# linuxdeployqt

./: CMakeLists.txt  README.md  main.cpp  shared.cpp  shared.h
.github/workflows/: build.yaml
cmake/: Deploy.cmake
